--- a/_layouts/my_publications_bib.html
+++ b/_layouts/my_publications_bib.html
@@ -2,17 +2,22 @@
 ---
 <!-- _layouts/bib.html -->
       <div class="row">
-        <div class="col-sm-2 abbr">
-        {%- if entry.abbr -%}
-          {%- if site.data.venues[entry.abbr] -%}
-          <abbr class="badge"><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
-          {%- else -%}
-          <abbr class="badge">{{entry.abbr}}</abbr>
-          {%- endif -%}
+        <div class="col-sm-4 abbr">
+        <!-- {%- if entry.abbr -%} -->
+        <!--   {%- if site.data.venues[entry.abbr] -%} -->
+        <!--   <abbr class="badge"><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr> -->
+        <!--   {%- else -%} -->
+        <!--   <abbr class="badge">{{entry.abbr}}</abbr> -->
+        <!--   {%- endif -%} -->
+        <!-- {%- endif -%} -->
+
+        {%- if entry.teaser -%}
+        {% include figure.html path=entry.teaser class="img-fluid rounded z-depth-1" zoomable=true %}
         {%- endif -%}
         </div>
 
         <!-- Entry bib key -->
+        <!-- <div id="{{entry.key}}" class="col-sm-8"> -->
         <div id="{{entry.key}}" class="col-sm-8">
         {% if entry.type == "thesis" -%}
           {{reference}}
@@ -99,8 +104,8 @@
           {%- if entry.bibtex_show %}
             <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
           {%- endif %}
-          {%- if entry.html %}
-            <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+          {%- if entry.link %}
+            <a href="{{ entry.link }}" class="btn btn-sm z-depth-0" role="button">Link</a>
           {%- endif %}
           {%- if entry.pdf %}
             {% if entry.pdf contains '://' -%}
