--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,5 +34,8 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light:     rgba($purple-color, 0.05);
-$code-bg-color-dark:      #2c3237 !default;
+$code-bg-color-light: rgba($grey-color, 0.05);
+$code-bg-color-dark:  #2c3237 !default;
+$theme-color:         #1D23CE !default;
+
+$font-family: 'Arial';
