--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,4 +38,4 @@ $code-bg-color-light: rgba($grey-color, 0.05);
 $code-bg-color-dark:  #2c3237 !default;
 $theme-color:         #1D23CE !default;
 
-$font-family: 'Arial';
+// $font-family: 'Arial';
