--- a/_layouts/my_publications_bib.html
+++ b/_layouts/my_publications_bib.html
@@ -2,7 +2,7 @@
 ---
 <!-- _layouts/bib.html -->
       <div class="row">
-        <div class="col-sm-4 col-xs-12 m-auto abbr">
+        <div class="col-sm-4 col-xs-12 abbr">
         <!-- {%- if entry.abbr -%} -->
         <!--   {%- if site.data.venues[entry.abbr] -%} -->
         <!--   <abbr class="badge"><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr> -->
@@ -17,7 +17,7 @@
         </div>
 
         <!-- Entry bib key -->
-        <div id="{{entry.key}}" class="col-sm-8 col-xs-12 m-auto">
+        <div id="{{entry.key}}" class="col-sm-8 col-xs-12">
         {% if entry.type == "thesis" -%}
           {{reference}}
         {%- else %}
