fix publication image responsiveness mode

--- a/_layouts/my_publications_bib.html
+++ b/_layouts/my_publications_bib.html
@@ -12,7 +12,7 @@
         <!-- {%- endif -%} -->
 
         {%- if entry.teaser -%}
-        {% include figure.html path=entry.teaser class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.html path=entry.teaser class="img-responsive rounded z-depth-1" zoomable=true %}
         {%- endif -%}
         </div>
 
